# Gorgon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Gorgon/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  Gorgon.cpp  cgltf_include.h  gltf_loader.cpp  gltf_loader.h  pch.h  vma_raii.cpp  vma_raii.h
Gorgon/gltf/: loader.cpp  loader.h  loader_tinygltf.cpp  model.cpp  model.h
Gorgon/shaders/: CMakeLists.txt  combined.slang  common.inl  pushconstants.inl  shared.inl
Gorgon/vk/: shader.cpp  shader.h  vma.cpp  vma.h
